# xzy-yooasset-extractor--

./: .gitignore  LICENSE  NOTICE  README.md  agent.md  pyproject.toml  requirements.txt  run_all_windows.bat  run_wizard_windows.bat  xzy_yooasset_extractor.py
docs/: algorithm.md  project-history.md  project-status-and-roadmap.md  zh-CN.md
examples/: extract_all_windows.bat  extract_bgm_windows.bat  extract_effects_windows.bat  extract_models_windows.bat  extract_ui_windows.bat
tests/: test_core.py  test_export_classified_tables.py  test_export_gameplay_tables.py  test_extract_table_texts.py  test_organize_exports.py  test_probe_binary_bins.py  test_run_full_pipeline.py
tools/: export_classified_tables.py  export_gameplay_tables.py  extract_table_texts.py  organize_exports.py  probe_binary_bins.py  probe_packets.py  probe_string_bins.py  probe_table_bins.py  run_full_pipeline.py
xzy_yooasset_core/: __init__.py  bundle.py  cli.py  constants.py  discovery.py  exporter.py  manifest.py  models.py  progress.py  utils.py
