[project]
name = "xzy-yooasset-extractor"
version = "0.1.0"
description = "Local YooAssets and Unity bundle research extractor."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "UnityPy==1.25.0",
    "Pillow>=10",
    "pycryptodome>=3.20",
    "rich>=15.0.0",
    "openpyxl>=3.1.5",
]

[tool.uv]
package = false
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
